Bug 147565 - Browsing comments in the navigation pane also browses hidden solved comments
Summary: Browsing comments in the navigation pane also browses hidden solved comments
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.1.8.1 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.2
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-21 07:48 UTC by Anduril
Modified: 2024-03-26 12:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Navigation Pane comments arrows (28.76 KB, image/png)
2022-02-21 07:48 UTC, Anduril
Details
Example file (9.59 KB, application/vnd.oasis.opendocument.text)
2022-02-21 13:19 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anduril 2022-02-21 07:48:44 UTC
Created attachment 178423 [details]
Navigation Pane comments arrows

Actual behaviour:
With the resolved comments view option unchecked and the resolved comments invisible, using the navigation pane's arrows (see screenshot attached), browses through resolved (invisible) comments as well (in this case nothing is shown but the user is taken to the place where the resolved comment is).

Expected behaviour
With the resolved comments view option unchecked, the the navigation pane's arrows should browse only through unresolved comments.

Reproduce
Reproduce steps in "Actual behaviour"
Comment 1 Telesto 2022-02-21 13:19:28 UTC
Created attachment 178430 [details]
Example file

1. Open example file
2. Uncheck View -> Resolved comments
3. Sidebar -> Navigator -> Notice 2 entry's (expected only the visible comments)
Comment 2 Telesto 2022-02-21 13:20:19 UTC
Repro
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 2bb10a827ac13d0caf009e8526ccd9f17dc71653
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL Jumbo
Comment 3 Jim Raykowski 2022-02-24 03:31:08 UTC
Hi Anduril, Bug 146191 proposes to change the Navigate by Comment behavior to move the cursor to the comment anchor in the document versus moving it into the comment edit window. This would prevent the cursor from being lost when comment navigation is to resolved comments that are not shown. Not exactly what you have requested as expected behavior but probably better than the cursor disappearing.

The the move handler for comment navigation is here:
sw/source/uibase/uiview/viewmdi.cxx
IMPL_LINK( SwView, MoveNavigationHdl, void*, p, void )
case NID_POSTIT:
Comment 4 Jim Raykowski 2022-02-24 04:25:44 UTC
(In reply to Telesto from comment #1)
> Created attachment 178430 [details]
> Example file
> 
> 1. Open example file
> 2. Uncheck View -> Resolved comments
> 3. Sidebar -> Navigator -> Notice 2 entry's (expected only the visible
> comments)

@Telesto, separate ticket please so https://gerrit.libreoffice.org/c/core/+/130471 can be assigned to it.
Comment 5 Anduril 2022-02-24 10:06:03 UTC
Hi Jim,

thank you for coming back to me on this.

I have doubts on moving the cursor to the comment anchor rather than to the comment edit window, because when working, it is more useful to have the cursor in the edit window of the comment, which is where your attention (and action) is needed, rather than the spot in the text where the comment is anchored to (this is where you focus next, once you have read the comment).

The problem with the present behaviour is not really the disappearance of the cursor, since after a while you guess that it is going through all the comments (visible or invisible), but the fact that you are not able to focus on the non resolved.

Ex. Imagine a text where 90% of the comments have been resolved. If the collaborator only wants to see the non solved ones, he can either scroll the document visually, or use the navigation. In this latter case, he would like a similar experience to the one of scrolling, i.e. being brought from non solved to non solved comment.
Comment 6 Jim Raykowski 2022-02-26 00:39:40 UTC
Here is a patch that skips hidden comments when using the Navigate By control for Comments. It also fixes a recent issue that navigated comments are not scrolled into view:

https://gerrit.libreoffice.org/c/core/+/130518
Comment 7 Anduril 2022-02-26 08:37:53 UTC
Great patch Jim! This is what I was looking for! I imagine that this will be merged in some future version of Libreoffice and no further action from me is needed.
Comment 8 Commit Notification 2022-02-27 04:09:06 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5df0289f6af5aa7142017b56a8e17c134d54fe41

tdf#147565 Make navigate by comments skip hidden comments

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Jim Raykowski 2022-02-27 04:12:51 UTC
(In reply to Anduril from comment #7)
> Great patch Jim! This is what I was looking for! I imagine that this will be
> merged in some future version of Libreoffice and no further action from me
> is needed.

You can test the patch by following instructions given here:
https://wiki.documentfoundation.org/Testing_Daily_Builds
Comment 10 Commit Notification 2022-03-06 18:46:51 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/fc0f1eb3f99369988cdf68344bba8a66d5d394cd

tdf#147565 Make navigate by comments skip hidden comments

It will be available in 7.3.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 bevis 2022-06-10 03:17:57 UTC Comment hidden (spam)
Comment 12 abel1303 2022-09-30 06:58:37 UTC Comment hidden (spam)
Comment 13 jordanlaris 2022-11-04 02:48:53 UTC Comment hidden (spam)
Comment 14 davidjohn 2022-11-15 03:44:32 UTC Comment hidden (spam)
Comment 15 annagrimes 2022-12-01 04:09:35 UTC Comment hidden (spam)
Comment 16 stephanilope 2022-12-06 07:55:09 UTC Comment hidden (spam)
Comment 17 Daniele 2022-12-06 11:19:53 UTC
Hi, can anyone suggest how to prevent the spam messages that keep comint to this bug issue?
Thanks!
Comment 18 helga 2022-12-08 01:19:13 UTC Comment hidden (spam)
Comment 19 Mathew Aderson 2022-12-17 03:42:55 UTC Comment hidden (spam)
Comment 20 trace 2023-05-23 05:35:59 UTC Comment hidden (spam)
Comment 21 Daniele 2023-05-23 07:19:43 UTC
Hi, comment 20 seems to be spam.
Comment 22 samy 2023-06-06 17:23:10 UTC Comment hidden (spam)
Comment 23 Thelaptopsguide 2023-07-12 09:05:49 UTC Comment hidden (spam)
Comment 24 Nekopoi APK 2023-07-15 04:50:43 UTC Comment hidden (spam)
Comment 25 tuanbo 2023-07-26 04:23:32 UTC Comment hidden (spam)
Comment 26 Erickafroehli 2023-07-30 06:54:15 UTC Comment hidden (spam)
Comment 27 Erickafroehli 2023-07-30 06:55:51 UTC Comment hidden (spam)
Comment 28 jamesclerkjc 2023-08-07 07:01:37 UTC Comment hidden (spam)
Comment 29 gamlumurti 2023-09-01 15:33:23 UTC Comment hidden (spam)
Comment 30 gamlumurti 2023-09-06 11:42:44 UTC Comment hidden (spam)
Comment 31 call girl in Lahore 2023-09-13 12:29:31 UTC Comment hidden (spam)
Comment 32 gamlumurti 2023-09-13 15:57:09 UTC Comment hidden (spam)
Comment 33 gamlumurti 2023-09-21 12:56:42 UTC Comment hidden (spam)
Comment 34 gamlumurti 2023-10-01 14:15:59 UTC Comment hidden (spam)
Comment 35 Naomi Justin 2023-10-06 07:53:32 UTC Comment hidden (spam)
Comment 36 xamigi56 2023-10-16 12:20:49 UTC Comment hidden (spam)
Comment 37 helendam 2023-11-17 02:27:13 UTC Comment hidden (spam)
Comment 38 Nyt wordle 2023-11-29 05:13:39 UTC Comment hidden (spam)
Comment 39 robitony 2023-12-06 04:18:56 UTC Comment hidden (spam)
Comment 40 Morse Code Translator 2023-12-14 12:02:15 UTC Comment hidden (spam)
Comment 41 gamlumurti 2023-12-21 13:01:46 UTC Comment hidden (spam)
Comment 42 gamlumurti 2024-01-15 06:46:44 UTC Comment hidden (spam)
Comment 43 xamigi56 2024-02-04 13:31:40 UTC Comment hidden (spam)
Comment 44 xamigi56 2024-03-05 15:16:04 UTC Comment hidden (spam)
Comment 45 xamigi56 2024-03-17 00:49:37 UTC Comment hidden (spam)
Comment 46 xamigi56 2024-03-20 16:26:01 UTC Comment hidden (spam)
Comment 47 lauryfriese 2024-03-21 13:20:02 UTC Comment hidden (spam)
Comment 48 xamigi56 2024-03-21 17:18:52 UTC Comment hidden (spam)
Comment 49 ranker 2024-03-26 11:52:24 UTC Comment hidden (spam)