tdf#147565 Make navigate by comments skip hidden comments

Change-Id: I80f55146529505e5b6146db8cc324971fbc475e7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130518
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>